--- a/index.html
+++ b/index.html
@@ -12,17 +12,34 @@
     <body>
         <h1 id="enTitle">An Introduction of "Three Hundred Tang Poems"</h1>
         <h1 id="chTitle">唐詩三百首</h1>
+
         <div class="introduction">
-            <p>test test test test<br>introducing Tang Dynasty and Tang poems</p>
+            <p>A brief introduction of this project<br>test test test test</p>
+            <h2>1. Tang Dynasty</h2>
+            <p>introducing Tang Dynasty and Tang poems<br>test test test test</p>
             <div id="timelineChart"></div>
         </div>
+
         <div class="types">
-            <p>introducing poem types</p>
-            <div id="typesPieChart"></div>
+            <h2>2. Different Types of Poems</h2>
+            <p>introducing poem types<br>test test test test</p>
+            <div id="typesPieChart">
+                <div class='typesSticker'></div>
+            </div>
         </div>
-        <script src="script.js"></script>
-        <script src="timeline.js"></script>
-        <script src="typespie.js"></script>
+
+        <div class="poets">
+            <h2>3. Tang Poets</h2>
+            <p>introducing poets in <i>300 Tang Poems</i><br>test test test test</p>
+            <div id="poetsChart">
+                <div class='poetsIntro'></div>
+            </div>
+        </div>
+
+        <script src="scripts/script.js"></script>
+        <script src="scripts/timeline.js"></script>
+        <script src="scripts/typespie.js"></script>
+        <script src="scripts/poets.js"></script>
     </body>
 
 </html>
