--- a/index.html
+++ b/index.html
@@ -32,7 +32,19 @@
             <h2>3. Tang Poets</h2>
             <p>introducing poets in <i>300 Tang Poems</i><br>test test test test</p>
             <div id="poetsChart">
-                <div class='poetsIntro'></div>
+                <div class='poetsIntro'>
+                    <div id='info'>
+                        <p>Please Hoverover The Bars To Check Each Poet's Introduction</p>
+                    </div>
+                    <svg id='categoryBars'></svg>
+                </div>
+            </div>
+        </div>
+
+        <div class="poems">
+            <h2>4. Poems Show Room</h2>
+            <p>introducing poets in <i>300 Tang Poems</i><br>test test test test</p>
+            <div id="poemsShowRoom">
             </div>
         </div>
 
@@ -40,6 +52,7 @@
         <script src="scripts/timeline.js"></script>
         <script src="scripts/typespie.js"></script>
         <script src="scripts/poets.js"></script>
+        <script src="scripts/poems.js"></script>
     </body>
 
 </html>
