--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <div id='info'>
                         <p>Please Hoverover The Bars To Check Each Poet's Introduction</p>
                     </div>
-                    <svg id='categoryBars'></svg>
+                    <div id='poetBars'></div>
                 </div>
             </div>
         </div>
@@ -44,8 +44,8 @@
         <div class="poems">
             <h2>4. Poems Show Room</h2>
             <p>introducing poets in <i>300 Tang Poems</i><br>test test test test</p>
-            <div id="poemsShowRoom">
-            </div>
+            <select id="options"></select>
+            <div id="poemsShowRoom"></div>
         </div>
 
         <script src="scripts/script.js"></script>
@@ -53,6 +53,7 @@
         <script src="scripts/typespie.js"></script>
         <script src="scripts/poets.js"></script>
         <script src="scripts/poems.js"></script>
+        <script src="scripts/poetBar.js"></script>
     </body>
 
 </html>
