--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
         <div class="poems">
             <h2>4. Poems Show Room</h2>
             <p>introducing poets in <i>300 Tang Poems</i><br>test test test test</p>
+            <div class='buttons'>
+                <button class='mode active' value='types'>By Poem Types</button>
+                <button class='mode' value='poets'>By Poets</button>
+            </div>
             <select id="options"></select>
             <div id="poemsShowRoom"></div>
         </div>
