--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
 
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.5.0/d3.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/ScrollTrigger.min.js"></script>
     </head>
 
     <body>
         <h1 id="enTitle">An Introduction of "Three Hundred Tang Poems"</h1>
         <h1 id="chTitle">唐詩三百首</h1>
-
+        <p>A brief introduction of this project<br>test test test test</p>
+        
         <div class="introduction">
-            <p>A brief introduction of this project<br>test test test test</p>
             <h2>1. Tang Dynasty</h2>
             <p>introducing Tang Dynasty and Tang poems<br>test test test test</p>
             <div id="timelineChart"></div>
@@ -47,9 +49,15 @@
             <div class='buttons'>
                 <button class='mode active' value='types'>By Poem Types</button>
                 <button class='mode' value='poets'>By Poets</button>
+                <button class='mode' value='poems'>By Poems</button>
             </div>
             <select id="options"></select>
-            <div id="poemsShowRoom"></div>
+            <div id="poemsShowRoom">
+                <div id='selGraph'>
+                </div>
+                <div id='poemEn'></div>
+                <div id='poemCh'></div>
+            </div>
         </div>
 
         <script src="scripts/script.js"></script>
@@ -58,6 +66,7 @@
         <script src="scripts/poets.js"></script>
         <script src="scripts/poems.js"></script>
         <script src="scripts/poetBar.js"></script>
+        <script src="scripts/scrollTrigger.js"></script>
     </body>
 
 </html>
