--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div id="poetsChart">
                 <div class='poetsIntro'>
                     <div id='info'>
-                        <p>Please Hoverover The Bars To Check Each Poet's Introduction</p>
+                        <p class="hint">Please Hoverover The Bars To Read Each Poet's Introduction</p>
                     </div>
                     <div id='poetBars'></div>
                 </div>
@@ -54,10 +54,10 @@
             <select id="options"></select>
             <div id="poemsShowRoom">
                 <div id='selGraph'>
+                    <p>Poem Selector</p>
                 </div>
                 <div id='poemEn'></div>
                 <div id='poemCh'></div>
-            </div>
         </div>
 
         <script src="scripts/script.js"></script>
