--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="types">
-            <h2>2. Different Types of Poems</h2>
+            <h2>2. Types of Poems</h2>
             <p>introducing poem types<br>test test test test</p>
             <div id="typesPieChart">
                 <div class='typesSticker'></div>
@@ -44,7 +44,7 @@
         </div>
 
         <div class="poems">
-            <h2>4. Poems Show Room</h2>
+            <h2>4. Poems Showroom</h2>
             <p>introducing poets in <i>300 Tang Poems</i><br>test test test test</p>
             <div class='buttons'>
                 <button class='mode active' value='types'>By Poem Types</button>
