--- a/index.html
+++ b/index.html
@@ -12,19 +12,28 @@
     </head>
 
     <body>
-        <h1 id="enTitle">An Introduction of "Three Hundred Tang Poems"</h1>
-        <h1 id="chTitle">唐詩三百首</h1>
-        <p>A brief introduction of this project<br>test test test test</p>
-        
+        <h1 id="enTitle">An Introduction to "Three Hundred Tang Poems"</h1>
+        <h1 id="chTitle">《唐詩三百首》</h1>
+        <h3 class="author">Tingsong OU | 歐 庭菘</h3>
+            <div class="paragraph">
+                <p>The Tang Empire was the most prosperous dynasty throughout China's history. It featured an open and equal social environment, the matured trading system with the rest of the world, and dazzling artistic achievements.</p>
+                <p>This visualization's topic is the Tang Poem, the brightest jewelry on the dynasty's artistic crown. Tang poems stand for the highest poetry achievement throughout China's history, and the poem collection, Three Hundred Tang Poems, is known by everyone in the Greater China reign.</p>
+                <p>The Tang poems have also been translated into many languages and are well-known in western countries. So, I believe the book is a bridge that connects my background to the world and enables more individuals to glimpse the prosperity of poetry in the 7-10th century's oriental world.</p>
+                <p>This English edition of Three Hundred Tang Poems is translated by Betty Tseng, who also translated the 310 Song Lyrics into English and the Stray Birds by Rabindranath into Traditional Chinese. Here is the link to all of her translation: <a href="https://28utscprojects.wordpress.com/" target="_blank">https://28utscprojects.wordpress.com/</a></p>
+            </div>
         <div class="introduction">
             <h2>1. Tang Dynasty</h2>
-            <p>introducing Tang Dynasty and Tang poems<br>test test test test</p>
+            <div class='paragraph'>
+                <p>Tang Dynasty was founded and ruled under the Li family from 618 to 904, then collapsed and succeeded by the chaotic "Five Dynasty and Ten Kingdoms." Tang was prosperous during 626 A.C. and 756 A.C. and was in its heyday under Emperor LI Shiming, WU Zetian (the first and the only Empress in ancient China's history), and LI Longji's reign.</p>
+            </div>
             <div id="timelineChart"></div>
         </div>
 
         <div class="types">
             <h2>2. Types of Poems</h2>
-            <p>introducing poem types<br>test test test test</p>
+            <div class='paragraph'>
+                <p>There are eleven types of poems included in Three Hundred Tang Poems. However, the types are not completely different from each other; they are actually varied combinations of five poetry categories, they are Five-character, Seven-character, Folk-song, Verse, Octonary, and Quatrain.</p>
+            </div>
             <div id="typesPieChart">
                 <div class='typesSticker'></div>
             </div>
@@ -32,7 +41,9 @@
 
         <div class="poets">
             <h2>3. Tang Poets</h2>
-            <p>introducing poets in <i>300 Tang Poems</i><br>test test test test</p>
+            <div class='paragraph'>
+                <p>Around 2,200 Tang poets' names were found in the historic archive, and more than 200 poets were females. This book, Three Hundred Tang Poems, only includes poems from 77 poets with only one female, Du Qiuniang. The book was published in 1763 by Sun Zhu, targeted at the general public; a complete version of tang poems prepared for scholars is The Complete Tang Poems.</p>
+            </div>
             <div id="poetsChart">
                 <div class='poetsIntro'>
                     <div id='info'>
@@ -45,7 +56,9 @@
 
         <div class="poems">
             <h2>4. Poems Showroom</h2>
-            <p>introducing poets in <i>300 Tang Poems</i><br>test test test test</p>
+            <!-- <div class='paragraph'>
+                <p style="text-align: center; margin: 0">Please select a mode to filter the poems, and you can hover over the circles in the left column to access each poem.</p>
+            </div> -->
             <div class='buttons'>
                 <button class='mode active' value='types'>By Poem Types</button>
                 <button class='mode' value='poets'>By Poets</button>
